syntax = "proto3";

package cartpb;

option go_package = "github.com/wazwki/WearStore/cart-service/api/proto/cartpb";

import "google/api/annotations.proto";

service CartService {
  rpc AddToCart(cartpb.AddToCartRequest) returns (cartpb.AddToCartResponse) {
    option (google.api.http) = {
      post: "/v1/cart/add"
      body: "*"
    };
  }

  rpc RemoveFromCart(cartpb.RemoveFromCartRequest) returns (cartpb.RemoveFromCartResponse) {
    option (google.api.http) = {
      post: "/v1/cart/remove"
      body: "*"
    };
  }

  rpc GetCart(cartpb.GetCartRequest) returns (cartpb.GetCartResponse) {
    option (google.api.http) = {
      get: "/v1/cart/{user_id}"
    };
  }

  rpc ClearCart(cartpb.ClearCartRequest) returns (cartpb.ClearCartResponse) {
    option (google.api.http) = {
      post: "/v1/cart/clear"
      body: "*"
    };
  }

  rpc Checkout(cartpb.CheckoutRequest) returns (cartpb.CheckoutResponse) {
    option (google.api.http) = {
      post: "/v1/cart/checkout"
      body: "*"
    };
  }
}

message CartItem {
  string product_id = 1;
  string name = 2;
  double price = 3;
  int64 quantity = 4;
}

message Cart {
  string user_id = 1;
  repeated CartItem items = 2;
  double total_cost = 3;
}

message AddToCartRequest {
  string user_id = 1;
  string product_id = 2;
  int64 quantity = 3;
}

message AddToCartResponse {
  bool success = 1;
}

message RemoveFromCartRequest {
  string user_id = 1;
  string product_id = 2;
  int64 quantity = 3;
}

message RemoveFromCartResponse {
  bool success = 1;
}

message GetCartRequest {
  string user_id = 1;
}

message GetCartResponse {
  Cart cart = 1;
}

message ClearCartRequest {
  string user_id = 1;
}

message ClearCartResponse {
  bool success = 1;
}

message CheckoutRequest {
  string user_id = 1;
}

message CheckoutResponse {
  double total_price = 2;
}
